rns-lang/test_data/integration/error/lexer/directives/unknown_directive_as_first_token.ja
    .unknown_directive HelloWorld
.end